[package]
name = "oled_display"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
nb = "1"
stm32f1xx-hal = {version = "0.10.0", features = ["stm32f103", "rt"]}
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6.0"
ssd1306 = "0.8.0"
embedded-graphics = "0.8.0"
rand = { version = "0.8.3", features = ["small_rng"], default-features = false }

[[bin]]
name = "oled_display"
test = false
bench = false

[profile.release]
codegen-units = 1
lto = true
panic = "abort"